tests/ui/lint/snapshots/fix_redundant_operation_identity.snap
---
source: tests/ui/lint/fixes.rs
---
fn main() {
  let x = 5
  let _ = 0 + x
}
=== fixed ===
fn main() {
  let x = 5
  let _ = x
}
