tests/ui/lint/snapshots/fix_redundant_operation_keeps_operand_parens.snap
---
source: tests/ui/lint/fixes.rs
---
fn main() {
  let a = 1
  let b = 2
  let c = 3
  let _ = (a + b) * 1 * c
}
=== fixed ===
fn main() {
  let a = 1
  let b = 2
  let c = 3
  let _ = (a + b) * c
}
