tests/ui/lint/snapshots/fix_redundant_pattern_matching_is_err.snap
---
source: tests/ui/lint/fixes.rs
---
pub fn f(r: Result<int, string>) -> bool {
  match r { Ok(_) => false, Err(_) => true }
}
=== fixed ===
pub fn f(r: Result<int, string>) -> bool {
  r.is_err()
}
