tests/ui/lint/snapshots/fix_redundant_pattern_matching_is_some.snap
---
source: tests/ui/lint/fixes.rs
---
pub fn f(o: Option<int>) -> bool {
  match o { Some(_) => true, None => false }
}
=== fixed ===
pub fn f(o: Option<int>) -> bool {
  o.is_some()
}
