tests/ui/lint/snapshots/fix_redundant_rebinding.snap
---
source: tests/ui/lint/fixes.rs
---
fn main() {
  let a = 5;
  let a = a;
  let _ = a
}
=== fixed ===
fn main() {
  let a = 5;
  let _ = a
}
