tests/ui/lint/snapshots/fix_rest_only_slice_pattern_bind.snap
---
source: tests/ui/lint/fixes.rs
---
fn main() {
  let xs = [1, 2, 3]
  let [..rest] = xs
  let _ = rest
}
=== fixed ===
fn main() {
  let xs = [1, 2, 3]
  let rest = xs
  let _ = rest
}
